--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hackathon_portal/static/bootstrap"]
 	path = hackathon_portal/static/bootstrap
-	url = git@github.com:twitter/bootstrap.git
+	url = git@github.com:jchuah/bootstrap.git
