--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Flask==0.9
 Flask-SQLAlchemy==0.16
 Jinja2==2.6
+PIL==1.1.7
 SQLAlchemy==0.8.0
 Werkzeug==0.8.3
+ipdb==0.7
+ipython==0.13.1
 mock==1.0.1
 simplejson==3.1.2
 wsgiref==0.1.2
